# Gem-Scrapper

./: CONTEXT.md  README.md  WRITEUP.md  pyproject.toml
data/processed/: all_data.json  bad_data.json  good_data.json  insights.txt
data/raw/: bid_results_data.json  listings_data.json  vendors_data.json
src/scrapper/: details.py  filters.py  listings.py  main.py  models.py  processing.py  storage.py
