[project]
name = "gem-scrapper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.14",
]
